--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Comic Sans MS', cursive, sans-serif;
-  background: url('https://images.unsplash.com/photo-1587329310686-8814bfb56a7c') no-repeat center center fixed;
+  background: url('allbg.jpeg') no-repeat center center fixed;
   background-size: cover;
   color: white;
   text-align: center;
