--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 /* === General Page Styling === */
 body {
   font-family: 'Waltograph', cursive;
-  background: url('https://images.unsplash.com/photo-1587329310686-8814bfb56a7c') no-repeat center center fixed;
+  background: url('bg2.jpg') no-repeat center center fixed;
   background-size: cover;
   color: white;
   text-align: center;
